--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
+    "firebase": "^5.5.3",
+    "firebaseui": "^3.4.1",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
